优化用户信息修改功能

--- a/friend/.settings/org.eclipse.core.resources.prefs
+++ b/friend/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Fri Apr 01 22:51:18 CST 2016
+#Fri Apr 15 13:01:12 CST 2016
 eclipse.preferences.version=1
+encoding//doc/2016-04-15.sql=UTF-8
 encoding/<project>=gbk
