完成好友查询功能的修改

--- a/friend/.settings/org.eclipse.core.resources.prefs
+++ b/friend/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Fri Apr 15 13:01:12 CST 2016
+#Sat Apr 16 11:01:37 CST 2016
 eclipse.preferences.version=1
+encoding//WebRoot/admin/js/jquery.dataTables.min.js=UTF-8
 encoding//doc/2016-04-15.sql=UTF-8
 encoding/<project>=gbk
