汽车维修添加盘点管理功能 同城交友添加我的动态功能

--- a/QcwxglxtMISforJSP/WebContent/WEB-INF/web.xml
+++ b/QcwxglxtMISforJSP/WebContent/WEB-INF/web.xml
@@ -292,4 +292,12 @@
     <url-pattern>/Partinner</url-pattern>
   </servlet-mapping>
   <!-- partinner servlets end -->
+  
+  <!-- check servlets begin -->
+  <servlet>
+    <display-name>Check</display-name>
+    <servlet-name>Check</servlet-name>
+    <servlet-class>servlets.checkservlets.CheckServlet</servlet-class>
+  </servlet>
+  <!-- check servlets end -->
 </web-app>
